gtk2-engines-oxygen (1.0.2-2) UNRELEASED; urgency=low

  * debian/control:
    - Point to the correct VCS.
    - Bumped B-D on debhelper to 8.
  * debian/watch: Added.
  * debian/patches/LP719078_fix_assert_failure.patch: Added. (LP: #719078) 
  * debian/source:
    - local-options: Added with "unapply-patches".
    - options: Added to ensure BZip2 compression.
  * debian/compat: Raised to 8.
  * debian/rules:
    - Ensure minimal linking.
    - Added .PHONY line.

 -- Kai Wasserbäch <curan@debian.org>  Sun, 20 Feb 2011 10:37:21 +0100

gtk2-engines-oxygen (1.0.2-1) unstable; urgency=low

  * New upstream release.

 -- Fathi Boudra <fabo@debian.org>  Fri, 11 Feb 2011 11:58:52 +0200

gtk2-engines-oxygen (1.0.0+git260+36e283c-1) unstable; urgency=low

  * Initial release. (Closes: #601046)

 -- Fathi Boudra <fabo@debian.org>  Fri, 31 Dec 2010 10:31:44 +0200
