@@ -14,4 +14,7 @@ override_dh_auto_configure:
 					-DCMAKE_MODULE_LINKER_FLAGS="-Wl,--no-undefined -Wl,--as-needed" \
 					-DCMAKE_EXE_LINKER_FLAGS="-Wl,--no-undefined -Wl,--as-needed"
 
-.PHONY: override_dh_makeshlibs override_dh_auto_configure
+override_dh_install:
+	dh_install --list-missing
+
+.PHONY: override_dh_makeshlibs override_dh_auto_configure override_dh_install
