@@ -12,6 +12,7 @@ gtk2-engines-oxygen (1.0.2-2) UNRELEASED; urgency=low
   * debian/rules:
     - Ensure minimal linking.
     - Added .PHONY line.
+    - Added dh_install override to list missing files.
 
  -- Kai Wasserbäch <curan@debian.org>  Sun, 20 Feb 2011 10:37:21 +0100
 
